<resources>
    <string name="app_name" translatable="false">Prototipos</string>
    <string name="title_activity_secciones_menu" translatable="false">secciones_menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_menu">Options</string>
    <string name="redes_soci">Social Networks</string>
    <string name="trasporte_menu">Transportation</string>
    <string name="email_menu">E-mail</string>
    <string name="servi_menu">Servicies</string>
    <string name="news_menu">News</string>
    <string name="Servicios_op">Servicies</string>
    <string name="ok_contra">OK</string>
    <string name="volver_contra">Back</string>
    <string name="labelContra">Enter Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="or">or</string>
    <string name="escriba_su_email">Escriba su Email</string>
    <string name="escriba_su_nombre_de_usuario">Escriba su nombre de usuario</string>
    <string name="todo">TODO</string>
    <string name="OR">OR</string>

</resources>