<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="304dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:isScrollContainer="false"  >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Crear_Cuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cherry_swash_bold"
                    android:foregroundGravity="center"
                    android:text="Crear Cuenta"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textAlignment="center"
                    app:srcCompat="@drawable/logo"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arbutus_slab"
                    android:text="Nombre" />

                <EditText
                    android:id="@+id/Txt_Usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contextClickable="true"
                    android:ems="10"
                    android:fontFamily="@font/castoro"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:text="@string/escriba_su_nombre_de_usuario"
                    android:autofillHints="" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arbutus_slab"
                    android:text="Email" />

                <EditText
                    android:id="@+id/Txt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/castoro"
                    android:inputType="textEmailAddress"
                    android:text="@string/escriba_su_email"
                    android:autofillHints="" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arbutus_slab"
                    android:text="Contraseña" />

                <EditText
                    android:id="@+id/Txt_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/castoro"
                    android:inputType="textPassword"
                    android:autofillHints="" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arbutus_slab"
                    android:text="Confirmar Contraseña" />

                <EditText
                    android:id="@+id/Txt_Confripassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/castoro"
                    android:inputType="textPassword"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/Btn_CrearCuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crear_cuenta"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:fontFamily="@font/akaya_telivigala"
                    android:text="@string/OR"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_up" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>