<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".numpadContra">

    <ImageButton
        android:id="@+id/imageButton18"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton17"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/menu"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="264dp"
        android:layout_height="193dp"
        android:layout_marginBottom="216dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="@string/volver_contra"
            android:textColor="#000000"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="1"
            android:textColor="#000000"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="2"
            android:textColor="#000000"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="3"
            android:textColor="#000000"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="4"
            android:textColor="#000000"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="5"
            android:textColor="#000000"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="6"
            android:textColor="#000000"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="9"
            android:textColor="#000000"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="7"
            android:textColor="#000000"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="@string/ok_contra"
            android:textColor="#000000"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="8"
            android:textColor="#000000"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:foregroundTint="#000000"
            android:text="0"
            android:textColor="#000000"
            app:layout_column="1"
            app:layout_row="3" />

    </androidx.gridlayout.widget.GridLayout>

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="273dp"
        android:layout_height="42dp"
        android:layout_marginTop="264dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="196dp"
        android:layout_height="35dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/cherry_swash_bold"
        android:text="@string/labelContra"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="160dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <ImageButton
        android:id="@+id/imageButton16"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.538"
        app:srcCompat="@drawable/back"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton17"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="111dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton16"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.538"
        app:srcCompat="@drawable/phone"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>